--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -3,21 +3,82 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+  <title>Home - Great Idea!</title>
 
-  <title>Great Idea!</title>
-
+  <link href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
   <body>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
+<header>
+  <section class='nav-bar'>
+    <nav>
+      <a href='services.html'>Services</a><!--
+      --><a href='#product'>Product</a><!--
+      --><a href='#vision'>Vision</a><!--
+      --><a href='#features'>Features</a><!--
+      --><a href='#about'>About</a><!--
+      --><a href='#contact'>Contact</a>
+    </nav>
+    <section class='logo'></section>
+  </section>
+  <section class='intro'>
+    <div>
+      <h1>Innovation<br/> 
+      On<br/>
+      Demand</h1>
+      <button>Get Started</button>
+      </div><!--
+      --><div class='header-img'></div>
+  </section>
+</header>
+<hr />
+  <section class='main'>
+    <section class='content'>
+       <div>
+        <h2 class='subheading'><span id='features'></span>Features</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+       </div><!--
+        --><div>
+        <h2 class='subheading'><span id='about'></span>About</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+       </div>
+    </section>
+    <section class='accent-img'></section>
+    <section class='content'>
+      <div>
+        <h2 class='subheading'><span id='services'></span>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div><!--
+      --><div>
+        <h2 class='subheading'><span id='product'></span>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div><!--
+      --><div>
+        <h2 class='subheading'><span id='vision'></span>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </section>
+  </section>
+  <hr />
+  <footer>
+    <h2 class='subheading'><span id='contact'></span>Contact</h2>
+    <address>
+      <p>123 Way 456 Street<br />
+      Somewhere, USA</p><br />
       
-    
-  </body>
+      1 (888) 888-8888<br /><br />
+      sales@greatidea.io
+    </address>
+    <p class='copyright'>Copyright Great Idea! 2018</p>
+  </footer>
+</body>
 </html>
