Flex and queries, tablet remains unfinished for services

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -28,7 +28,7 @@
       --><a href='#about'>About</a><!--
       --><a href='#contact'>Contact</a>
     </nav>
-    <section class='logo'></section>
+    <a href='index.html'><section class='logo'></section></a>
   </section>
   <section class='intro'>
     <div>
