--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -27,7 +27,7 @@
       --><a href='#about'>About</a><!--
       --><a href='#contact'>Contact</a>
     </nav>
-    <div class='logo'></div>
+    <a href='index.html'><div class='logo'></div></a>
   </section>
   <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
   <section class='services'> 
