Fixing screen sizes

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -37,7 +37,7 @@
       Demand</h1>
       <button>Get Started</button>
       </div><!--
-      --><div class='header-img'></div>
+      --><img src='img/header-img.png' class='header-img' />
   </section>
 </header>
 <hr />
