--- a/great-idea/about.html
+++ b/great-idea/about.html
@@ -25,7 +25,7 @@
           --><a href='#product'>Product</a><!--
           --><a href='#vision'>Vision</a><!--
           --><a href='#features'>Features</a><!--
-          --><a href='#about'>About</a><!--
+          --><a href='about.html'>About</a><!--
           --><a href='#contact'>Contact</a>
         </nav>
         <a href='index.html'><section class='logo'></section></a>
