--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -20,11 +20,11 @@
 <header>
   <section class='nav-bar'>
     <nav>
-      <a href='#services'>Services</a><!--
+      <a href='services.html'>Services</a><!--
       --><a href='#product'>Product</a><!--
       --><a href='#vision'>Vision</a><!--
       --><a href='#features'>Features</a><!--
-      --><a href='#about'>About</a><!--
+      --><a href='about.html'>About</a><!--
       --><a href='#contact'>Contact</a>
     </nav>
     <a href='index.html'><div class='logo'></div></a>
